Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-21951

mariabackup SST fail if data-directory have lost+found directory

    XMLWordPrintable

Details

    Description

      Mariabackup SST fail if database directory contains lost+found

       rm: cannot remove ‘/data/lib/mariadb/lost+found’: Permission denied
      
      

      scripts/wsrep_sst_mariabackup.sh does not exclude lost+found directory while performing SST

      https://github.com/MariaDB/server/blob/93ac7ae70ff000353538f732899b421a3f2ea7ce/scripts/wsrep_sst_mariabackup.sh

      Attachments

        Issue Links

          Activity

            People

              sysprg Julius Goryavsky (Inactive)
              pramod.mahto@mariadb.com Pramod Mahto
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 5d 4.5h
                  5d 4.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.