extra/mariabackup/xtrabackup.cc
@@ -2270,7 +2270,7 @@ check_if_skip_database(
 	if (databases_exclude_hash &&
 		find_filter_in_hashtable(name, databases_exclude_hash,
 					 &database) &&
-		!database->has_tables) {
+		(!database->has_tables || !databases_include_hash)) {
 		/* Database is found and there are no tables specified,
 		   skip entire db. */
 		return DATABASE_SKIP;
